[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "geopandas>=1.1.2",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pandas-stubs~=3.0.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
